Fix long text not wrapping properly

--- a/css/index.css
+++ b/css/index.css
@@ -137,6 +137,8 @@ header > div> div:nth-of-type(2) {
 .reward_code {
     font-size: 30px;
     font-weight: bold;
+    width: 100%;
+    word-wrap: break-word;
 }
 
 .reward_code a {
